--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
+
   "name": "expensify",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
-    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
+    "build:prod": "webpack -p --env production",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
+
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
@@ -21,12 +23,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.15.1",
-    "enzyme-to-json": "3.4.3",
     "express": "4.17.1",
-    "jest": "20.0.4",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "0.8.0",
     "moment": "2.24.0",
     "node-sass": "4.12.0",
@@ -39,14 +36,22 @@
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "5.1.2",
-    "react-test-renderer": "16.11.0",
     "redux": "4.0.4",
     "sass-loader": "8.0.0",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
     "webpack": "4.41.2",
-    "webpack-cli": "^3.3.9",
+    "webpack-cli": "^3.3.9"
+  },
+
+  "devDependencies": {
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.15.1",
+    "enzyme-to-json": "3.4.3",
+    "jest": "20.0.4",
+    "react-test-renderer": "16.11.0",
     "webpack-dev-server": "3.8.2"
   }
+  
 }
