--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-
   "name": "expensify",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-
   "scripts": {
     "build:dev": "webpack",
     "dev-server": "webpack-dev-server",
@@ -13,7 +11,6 @@
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
-
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
@@ -28,6 +25,7 @@
     "moment": "2.24.0",
     "node-sass": "4.12.0",
     "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
     "raf": "3.4.1",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
@@ -44,7 +42,6 @@
     "webpack": "4.41.2",
     "webpack-cli": "^3.3.9"
   },
-
   "devDependencies": {
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
@@ -53,5 +50,4 @@
     "react-test-renderer": "16.11.0",
     "webpack-dev-server": "3.8.2"
   }
-  
 }
